--- a/eqm/pubspec.yaml
+++ b/eqm/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/images/mollie.png
     - assets/images/salvador.png
     - assets/images/ryan.png
+    - assets/images/account.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
