--- a/eqm/pubspec.yaml
+++ b/eqm/pubspec.yaml
@@ -63,6 +63,9 @@ flutter:
     - assets/images/salvador.png
     - assets/images/ryan.png
     - assets/images/account.png
+    - assets/images/agree.png
+    - assets/images/disagree.png
+    - assets/images/neutral.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
