--- a/eqm/pubspec.yaml
+++ b/eqm/pubspec.yaml
@@ -30,9 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
 
   #make web requests
   http: ^0.13.5
+
+  #firebase
+  firebase_core: ^2.10.0
+  cloud_firestore: ^4.8.0
+  firebase_auth: ^4.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
