--- a/eqm/pubspec.yaml
+++ b/eqm/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/images/agree.png
     - assets/images/disagree.png
     - assets/images/neutral.png
+    - assets/.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
