--- a/eqm/pubspec.yaml
+++ b/eqm/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_application_1
-description: "A new Flutter project."
+name: ethical_query
+description: "An ethical chatbot app"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -45,8 +45,16 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/eqm.png"
+    
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
